saved ads, featured ad and all pages are dynamic

--- a/web/html_components/member/account/notifications.html
+++ b/web/html_components/member/account/notifications.html
@@ -14,7 +14,7 @@
         </div>
         <div class="row form-group">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                This is notification page. This page will be implemented soon.
+<!--                This is notification page. This page will be implemented soon.-->
             </div>
         </div>
     </div>
