--- a/web/html_components/member/featuredad/ranking.html
+++ b/web/html_components/member/featuredad/ranking.html
@@ -38,12 +38,12 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let ranking of rankingList">
+<!--                        <tr *ngFor="let ranking of rankingList">
                             <td data-label="Rank">{{ranking.rankId}}</td>
                             <td data-label="Advert">{{ranking?.product?.title}}</td>
                             <td data-label="Current Bid">{{ranking?.currentBid?.currencyUnit?.title}}{{ranking?.currentBid?.amount}}</td>
                             <td data-label="Top Bid">{{ranking?.topBid?.currencyUnit?.title}}{{ranking?.topBid?.amount}}</td>
-                        </tr>
+                        </tr>-->
                     </tbody>
                 </table>
             </div>
