--- a/web/html_components/member/featuredad/stats.html
+++ b/web/html_components/member/featuredad/stats.html
@@ -34,11 +34,11 @@
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                             <select class="form-control select-custom-field">
-                                <option *ngFor="let product of productList" value="{{product.title}}"><a id="{{product.id}}">{{product.title}}</a></option>
+                                <option *ngFor="let product of productList" value="{{product.title}}">{{product.title}}</option>
                             </select> 
                         </div>
                     </div>
-                    <div class="row form-group">
+<!--                    <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                             <h5 class="featured-ad-label">From</h5>
                         </div>
@@ -56,7 +56,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                             <input class="form-control input-custom-field" type="text" id="datepicker">
                         </div>
-                    </div>
+                    </div>-->
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-6 col-md-offset-6 col-md-6 col-lg-6">
                             <button id="view-stats-button" class="form-control common-custom-button">View Stats</button>
@@ -76,13 +76,13 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let stat of statList">
+<!--                                    <tr *ngFor="let stat of statList">
                                         <td data-label="Date">{{stat.date}}</td>
                                         <td data-label="Clicks">{{stat.clicks}}</td>
                                         <td data-label="Impressions">{{stat.impressions}}</td>
                                         <td data-label="CTR">{{stat.ctr}}</td>
                                         <td data-label="Cost">{{stat.cost.amount}}{{stat.cost.currencyUnit.title}}</td>
-                                    </tr>
+                                    </tr>-->
                                 </tbody>
                             </table>
                         </div>
