--- a/web/html_components/member/message/showmessage.html
+++ b/web/html_components/member/message/showmessage.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="dashboard-left-sidebar-ul margin-top-align">
-            <li><a [routerLink]="['/inbox']" (click)="inbox($event)">Inbox</a></li>
-            <li><a [routerLink]="['/sent']" (click)="sent($event)">Sent</a></li>
-            <li><a [routerLink]="['/saved']" (click)="saved($event)">Saved</a></li>
+            <li><a [routerLink]="['/inbox']">Inbox</a></li>
+            <li><a [routerLink]="['/sent']">Sent</a></li>
+            <!--<li><a [routerLink]="['/saved']">Saved</a></li>-->
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
