--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -46,7 +46,7 @@
                             <div class="my-ads-product-price-title">Price</div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 form-group">
-                            <div class="my-ads-product-price-amount">{{product.price}}</div>
+                            <div class="my-ads-product-price-amount">{{product.basePrice}} £</div>
                         </div>
                     </div>
 
