--- a/web/html_components/public/product.html
+++ b/web/html_components/public/product.html
@@ -21,12 +21,12 @@
                             <h5 class="product-info-details-left-panel-auction-time">
                                 3 hours 25 mins 20 secs
                             </h5>
-                            <h5 class="product-info-details-left-panel-current-price-header">
+<!--                            <h5 class="product-info-details-left-panel-current-price-header">
                                 Current Bid:
                             </h5>
                             <h3 class="product-info-details-left-panel-current-price">
                                 {{product?.basePrice?.currencyUnit?.title}} {{product?.basePrice?.amount}}
-                            </h3>
+                            </h3>-->
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
             <div class="product-info-details-left-panel">
                 <div class="row form-group">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>
+                        <!--<h3 class="product-info-details-left-panel-middle-heading">This property is marketed by:</h3>-->
                     </div>
                 </div>
                 <div class="row form-group">
@@ -89,7 +89,7 @@
                         <h1 class="product-info-details-right-panel-product-title">{{productInfo.title}}</h1>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
-                        <h1 class="product-info-details-right-panel-product-price">{{product?.basePriceUnit?.title}}{{product?.basePrice}}</h1>
+                        <h1 class="product-info-details-right-panel-product-price">{{productInfo?.basePrice}} £</h1>
                     </div>
                 </div>
                 <div class="row form-group">
