--- a/web/html_components/member/featuredad/individualadbids.html
+++ b/web/html_components/member/featuredad/individualadbids.html
@@ -66,17 +66,17 @@
                             <span>{{product.title}}</span>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2  form-group">
-                            <span>{{product.location.postCode}}</span>
+                            <span>{{product?.location?.postCode}}</span>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                                 <div class="radio-inline">
-                                    <input type="radio" name="ad-bids-optradio-{{product.id}}" checked><span>default({{product.adBid.amount}}{{product.adBid.currencyUnit.title}})</span>
+                                    <input type="radio" name="ad-bids-optradio-{{product.id}}" checked><span>default({{product?.adBid?.amount}}{{product?.adBid?.currencyUnit?.title}})</span>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="radio-inline">
-                                    <input type="radio" name="ad-bids-optradio-{{product.id}}"><span>custom:</span>  <input id="custom-bid" name="custom-bid" type="number" value="{{product.adBid.amount}}"/> 
+                                    <input type="radio" name="ad-bids-optradio-{{product.id}}"><span>custom:</span>  <input id="custom-bid" name="custom-bid" type="number" value="{{product?.adBid?.amount}}"/> 
                                 </div>
                             </div>
                         </div>
