--- a/web/html_components/public/bid.html
+++ b/web/html_components/public/bid.html
@@ -49,10 +49,10 @@
                 </div>
                 <div class="row form-group">
                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                       <img class="img-responsive" src="resources/images/{{product.img}}">
+                       <img class="img-responsive" src="resources/images/product/{{product.img}}">
                     </div>
                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                       <a><h3 class="bid-history-product-item-description">{{product.description}}</h3></a>
+                       <a (click)="selectProduct($event, product.id)"><h3 class="bid-history-product-item-description">{{product.title}}</h3></a>
                     </div>
                 </div>
                 <div class="row">
@@ -60,7 +60,7 @@
                         <h3 class="bid-history-product-item-price-title">Item Price: </h3>
                     </div>
                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                        <h2 class="bid-history-product-item-price-content">{{product?.basePriceUnit?.title}}{{product?.basePrice}}</h2>
+                        <h2 class="bid-history-product-item-price-content">{{product?.basePrice}}  £</h2>
                     </div>
                 </div>
                 <div class="row">
