mail template is updated

--- a/src/java/mail-templates/mail-verification.html
+++ b/src/java/mail-templates/mail-verification.html
@@ -1,16 +1,24 @@
 <html>
     <head>
     </head>
-    <body>
-        <table bgcolor="#008000" width="100%">
+    <body style="padding:10px; font-family: 'Arial',sans-serif; line-height: 150%;">
+        <table style="width: 100%">
             <tr>
                 <td>
-                    <h2><font color="#ffffff" size="18" ><b>Verify your email</b></font></h2>
+                    <img style="height: 80px; width: 160px; padding: 5px 10px; margin-bottom:15px;" src="http://roomauction.co.uk/resources/images/logo.png" alt="Logo">
+                </td>
+            </tr>
+        </table>
+        <table style="background-color:#2874b9; width: 100%; padding: 5px 10px; ">
+
+            <tr>
+                <td>
+                    <h2 style="color:#fff; font-size:20px; font-weight: bold; margin-top:15px; line-height: 150%;">Verify Your Email</h2>
                 </td>
             </tr>
         </table>
         <br>
-        <table bgcolor="#d4d4d4" width="100%">
+        <table style="background-color:#ddd; border: 2px solid #eee; width: 100%; padding: 5px 10px; color:#484848; font-size:17px; font-weight: normal; line-height: 150%; ">
             <tr>
                 <td>
                     To finish setting up this Property auction account, we just need to make sure this email address is yours.
@@ -23,7 +31,7 @@
             </tr>
             <tr>
                 <td>
-                    If you didn't make this request, click <a href="">here</a> to cancel.
+                    If you didn't make this request, click <a style="background-color: #f06226; padding: 5px 10px; color: #fff; border-radius: 4px;"  href="">here</a> to cancel.
                 </td>
             </tr>
             <tr>
