--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -67,7 +67,7 @@
                         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i><a (click)="myproduct($event, product.id)"><div class="option"> Edit</div></a>
                         </div>
-                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
+<!--                        <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
                             <i class="fa fa-eye" aria-hidden="true"></i><a href=""><div class="option"> View</div></a>
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
                             <i class="fa fa-line-chart" aria-hidden="true"></i><a href=""><div class="option"> Stats</div></a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
