--- a/web/html_components/member/myads.html
+++ b/web/html_components/member/myads.html
@@ -12,7 +12,7 @@
                             <li><a [routerLink]="['/individualadbids']" (click)="individualadbids($event)">Individual Ad Bids</a></li>
                             <li><a [routerLink]="['/stats']" (click)="stats($event)">Stats</a></li>
                             <li><a [routerLink]="['/ranking']" (click)="ranking($event)">Ranking</a></li>
-                            <li><a [routerLink]="['/faq']" (click)="faq($event)">FAQ</a></li>
+                            <li><a (click)="fafaq($event)">FAQ</a></li>
                         </ul>
                     </li>
                 </ul>
