--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -1,10 +1,10 @@
 <div class="row">
      <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2 form-group">
         <ul class="profile-left-sidebar-ul margin-top-align">
-            <li><a class="active" [routerLink]="['/profile']" (click)="profile($event)">Profile</a></li>
-            <li><a [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
-            <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
-            <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
+            <li><a class="active" (click)="myprofile($event)">Profile</a></li>
+            <li><a (click)="editprofile($event)">Edit Profile</a></li>
+            <li><a (click)="uploadimg($event)">Upload Profile Picture</a></li>
+            <li><a (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10">
@@ -20,7 +20,7 @@
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <img class="img-responsive" src="resources/images/profile/{{user.img ? user.img : 'user.jpg'}}">
+                            <img class="img-responsive" src="resources/images/profile/{{user.img}}">
                         </div>
                     </div>
                 </div>
