--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -60,7 +60,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
-                                <button type="submit" class="form-control common-custom-button non-member-search-input">Rent</button>
+                                <button type="submit" class="form-control common-custom-button non-member-search-input">Search</button>
                             </div>
                         </div>
                         <div class="row form-group">
