client feedback on member navbar, dashboard box, about + contact + faq page

--- a/web/html_components/public/contactus.html
+++ b/web/html_components/public/contactus.html
@@ -1,101 +1,38 @@
-<html>
+<div class="container">
+    <div class="row margin-top-bottom-10px">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <h3>Contact Us</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <p>Room Auction is operated by Cadogan McQueen Concierge Limited</p>
 
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 12 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri","sans-serif";}
-a:link, span.MsoHyperlink
-	{color:blue;
-	text-decoration:underline;}
-a:visited, span.MsoHyperlinkFollowed
-	{color:purple;
-	text-decoration:underline;}
-p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
-	{margin:0in;
-	margin-bottom:.0001pt;
-	font-size:11.0pt;
-	font-family:"Calibri","sans-serif";}
-.MsoPapDefault
-	{margin-bottom:10.0pt;
-	line-height:115%;}
-@page Section1
-	{size:595.3pt 841.9pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.Section1
-	{page:Section1;}
--->
-</style>
+            <p>Company number: 10124266</p>
 
-</head>
+            <p> &nbsp;</p>
 
-<body lang=EN-US link=blue vlink=purple>
-<div class="container text-justify margin-top-align">
-    <div class=terms>
-        <div class=Section1>
+            <p><b>Registered office: </b></p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>Contact Us</span></p>
+            <p>Trinity House</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>&nbsp;</span></p>
+            <p>Heather Park Drive</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>Room
-Auction is operated by Cadogan McQueen Concierge Limited </span></p>
+            <p>Greater London</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>Company
-number: 10124266</span></p>
+            <p>England</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>&nbsp;</span></p>
+            <p>HA0 1SU</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>Registered
-office: </span></p>
+            <p> &nbsp;</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>Trinity
-House</span></p>
+            <p><b>Contact us by email or call us:</b></p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>Heather
-Park Drive</span></p>
+            <p>Email: info@roomauction.co.uk</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>Greater
-London</span></p>
+            <p>Tel: 020 3397 8425</p>
 
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>England</span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt;background:white'>HA0
-1SU</span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>&nbsp;</span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>Contact us by
-email or call us:<a name="_GoBack"></a></span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>&nbsp;</span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>Email:
-info@roomauction.co.uk</span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>Tel: 020 3397
-8425</span></p>
-
-<p class=MsoNoSpacing><span lang=EN-GB style='font-size:12.0pt'>&nbsp;</span></p>
-
-</div>
+            <p> &nbsp;</p>
+        </div>
     </div>
 </div>
-</body>
-</html>
