--- a/web/html_components/public/aboutus.html
+++ b/web/html_components/public/aboutus.html
@@ -1,90 +1,34 @@
-<html>
+<div class="container">
+    <div class="row margin-top-bottom-10px">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <h3>About</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <p>Launched in 2017, roomauction.co.uk is the simple way to search, bid and rent short to
+                long term accommodation. We aim to provide a unique and effective platform
+                which provides an exceptional property service for all potential agents,
+                landlords, tenants, lodgers and guests.</p>
 
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 12 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0in;
-	margin-right:0in;
-	margin-bottom:10.0pt;
-	margin-left:0in;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri","sans-serif";}
-a:link, span.MsoHyperlink
-	{color:blue;
-	text-decoration:underline;}
-a:visited, span.MsoHyperlinkFollowed
-	{color:purple;
-	text-decoration:underline;}
-p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
-	{margin:0in;
-	margin-bottom:.0001pt;
-	font-size:11.0pt;
-	font-family:"Calibri","sans-serif";}
-.MsoPapDefault
-	{margin-bottom:10.0pt;
-	line-height:115%;}
-@page Section1
-	{size:595.3pt 841.9pt;
-	margin:1.0in 1.0in 1.0in 1.0in;}
-div.Section1
-	{page:Section1;}
--->
-</style>
+            <p>Our services are available on our website and also via Android and Apple mobile
+                applications. We hope that when you use RoomAuction.co.uk, you'll enjoy our
+                fresh, clean and focused approach. </p>
 
-</head>
+            <p>Letting agents and landlords have moved to roomauction.co.uk from other sites and many
+                are advertising their new properties with us as we provide a platform and
+                service with many benefits.</p>
+            <p>So whether you're looking let or rent, we're in business to improve your experience. </p>
 
-<body lang=EN-US link=blue vlink=purple>
+            <p> &nbsp;</p>
 
-<div class=Section1>
+            <p><b>Information and support</b></p>
 
-<p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-GB
-style='font-size:20.0pt;line-height:115%'>About</span></b></p>
+            <p>E: info@roomauction.co.uk</p>
 
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>Launched
-in 2017, roomauction.co.uk is the simple way to search, bid and rent short to
-long term accommodation. We aim to provide a unique and effective platform
-which provides an exceptional property service for all potential agents,
-landlords, tenants, lodgers and guests. </span></p>
+            <p>T: 02033978425</p>
 
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>Our
-services are available on our website and also via Android and Apple mobile
-applications. We hope that when you use RoomAuction.co.uk, you'll enjoy our
-fresh, clean and focused approach. </span></p>
-
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>Letting
-agents and landlords have moved to roomauction.co.uk from other sites and many
-are advertising their new properties with us as we provide a platform and
-service with many benefits.</span></p>
-
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>So
-whether you're looking let or rent, we're in business to improve your
-experience. </span></p>
-
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>&nbsp;</span></p>
-
-<p class=MsoNormal><b><span lang=EN-GB style='font-size:12.0pt;line-height:
-115%'>Information and support</span></b></p>
-
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>E:
-info@roomauction.co.uk</span></p>
-
-<p class=MsoNormal><span lang=EN-GB style='font-size:12.0pt;line-height:115%'>T:
-02033978425</span></p>
-
+            <p> &nbsp;</p>
+        </div>
+    </div>
 </div>
-
-</body>
-
-</html>
