privacy policy, terms, about, contact pages styling and alignment issue fixing

--- a/web/html_components/public/aboutus.html
+++ b/web/html_components/public/aboutus.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row margin-top-bottom-10px">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <h3>About</h3>
+            <h3 class="text-center">About</h3>
         </div>
     </div>
-    <div class="row">
+    <div class="row font-size-16px text-justif">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <p>Launched in 2017, roomauction.co.uk is the simple way to search, bid and rent short to
                 long term accommodation. We aim to provide a unique and effective platform
