--- a/web/html_components/public/contactus.html
+++ b/web/html_components/public/contactus.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row margin-top-bottom-10px">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <h3>Contact Us</h3>
+            <h3 class="text-center">Contact Us</h3>
         </div>
     </div>
-    <div class="row">
+    <div class="row font-size-16px">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <p>Room Auction is operated by Cadogan McQueen Concierge Limited</p>
 
