--- a/web/html_components/public/landing.html
+++ b/web/html_components/public/landing.html
@@ -47,11 +47,11 @@
     </div>
     <div class="container">
         <div class="row form-group search-login-top-bottom-margin">
-            <div class="col-xs-12 col-sm-7 col-md-8 col-lg-8">
+            <div class="col-xs-12 col-sm-offset-2 col-sm-7 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
                 <div class="search-box-pagelet form-group">
                     <form role="form" (submit)="search($event, locationSelector.value)">
                           <div class="row form-group">
-                            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8 form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-8 col-lg-offset-2 col-lg-8 form-group">
                                 <div class="landing-page-search-box-layout">
                                     <input #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
                                         [typeahead]="locationList"
@@ -59,7 +59,7 @@
                                         class="form-control search-input-field">
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 form-group">
+                            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 form-group">
                                 <button type="submit" class="form-control common-custom-button non-member-search-input">Search</button>
                             </div>
                         </div>
@@ -71,40 +71,6 @@
                         </div>
                     </form> 
                 </div>
-            </div>
-            <div class="col-xs-12 col-sm-5 col-md-4 col-lg-4">
-                <form role="form" (submit)="login($event, username.value, password.value)" >
-                      <div class="login-pagelet">
-                        <div class="login-block">
-                            <h1>Login</h1>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <input type="text" #username id="username" class="form-control input-custom-field" placeholder="Your Email"/>
-                                    <input type="password" #password id="password" class="form-control input-custom-field" placeholder="Your Password"/>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group">
-                                    <div class="msg">{{msg}}</div>
-                                    <div class="error-msg">{{errorMsg}}</div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 form-group">
-                                    <div class="password-forgotten-anchor">
-                                        <a href="">Password forgotten</a>
-                                    </div>
-                                    <!--                                    <div class="sign-up-anchor">
-                                                                            <a [routerLink]="['/signup']" (click)="signup($event)">Click here to Signup</a>
-                                                                        </div>-->
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 form-group">
-                                    <button type="submit" class="form-control common-custom-button">Login</button> 
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
