--- a/web/html_components/member/home/index.html
+++ b/web/html_components/member/home/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </div>
-<div class="container margin-top-bottom-50px">
+<div class="container margin-top-bottom-50px position-adjust">
     <div class="row form-group">
         <div *ngFor="let product of featuredProductList" class="col-xs-12 col-sm-6 col-md-4 col-lg-4 form-group" >
             <div class="product-auction-head">
