--- a/web/html_components/member/app.html
+++ b/web/html_components/member/app.html
@@ -1,9 +1,14 @@
-<app-header></app-header>
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <router-outlet></router-outlet>
+<div class="wrapper">
+    <app-header></app-header>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
+    <div class="push"></div>
 </div>
-<app-footer></app-footer>
+<footer class="footer">
+    <app-footer></app-footer>
+</footer>
